devops_3/traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      containers:
      - name: traefik
        image: traefik:1.7
        ports:
        - containerPort: 80
        - containerPort: 8080
        - hostPort: 30021
        - hostPort: 30042
