devops_3/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
spec:
  selector:
    app: traefik-service
  ports:
  - port: 80
    targetPort: 80
  - port: 8080
    targetPort: 8080
  - port: 30021
    targetPort: 30021
  - port: 30042
    targetPort: 30042
