devops_3/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: poll-service
      port:
        number: 80
