devops_3/result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: result-service
      port:
        number: 80
